@@ -4,7 +4,7 @@ BUILD_CC = gcc
 # build libc with nptl instead of linuxthreads
 libc_MIN_KERNEL_SUPPORTED = 2.6.0
 libc_add-ons = nptl $(add-ons)
-libc_extra_cflags = -O3 -fomit-frame-pointer -D__USE_STRING_INLINES
+libc_extra_cflags = -O3
 libc_extra_config_options := $(extra_config_options) --with-tls --with-__thread
 
 # work around patch for gcc-3.4: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=260710
