@@ -8,6 +8,15 @@ glibc (2.3.2.ds1-19) unstable; urgency=low
     - debian/local/manpages/iconvconfig.8: Likewise + fix typo.
     - debian/local/manpages/mtrace.1: Likewise.
 
+    - debian/sysdeps/linux.mk: Drop -fomit-frame-pointer from compiling
+      option to build NPTL packages in order to get valid backtrace. 
+      -D__USE_STRING_INLINES is also dropped to consider about backtraces.
+      Requested by David Mosberger <davidm@hpl.hp.com>.
+    - debian/sysdeps/amd64.mk: Likewise.
+    - debian/sysdeps/i386.mk: Likewise.
+    - debian/sysdeps/s390.mk: Likewise.
+    - debian/sysdeps/sparc.mk: Likewise.
+
  -- GOTO Masanori <gotom@debian.org>  Sat,  6 Nov 2004 19:04:26 +0900
 
 glibc (2.3.2.ds1-18) unstable; urgency=high
